// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with loading 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "height": "100%",
        "justifyContent": "center",
        "width": "100%",
      },
    ]
  }
>
  <ActivityIndicator
    animating={true}
    color="blueviolet"
    hidesWhenStopped={true}
    size={30}
  />
</View>
`;

exports[`renders correctly without data 1`] = `
<RCTScrollView
  contentContainerStyle={
    Object {
      "alignItems": "center",
    }
  }
  style={
    Array [
      Object {
        "marginTop": 32,
        "width": "100%",
      },
    ]
  }
>
  <View>
    <Text
      style={
        Array [
          Object {
            "fontSize": 24,
            "fontWeight": "bold",
          },
        ]
      }
    />
    <Image
      height={375}
      source={
        Object {
          "uri": undefined,
        }
      }
      style={
        Array [
          Object {
            "borderRadius": 4,
            "height": 375,
            "marginTop": 16,
            "width": 600,
          },
        ]
      }
      width={600}
    />
    <Text
      style={
        Array [
          Object {
            "fontSize": 24,
            "fontWeight": "bold",
            "marginTop": 24,
          },
        ]
      }
    >
      Instructions
    </Text>
    <Text
      style={
        Array [
          Object {
            "fontSize": 16,
            "marginTop": 8,
            "textAlign": "center",
          },
        ]
      }
    />
  </View>
</RCTScrollView>
`;

exports[`renders correctly without loading 1`] = `
<RCTScrollView
  contentContainerStyle={
    Object {
      "alignItems": "center",
    }
  }
  style={
    Array [
      Object {
        "marginTop": 32,
        "width": "100%",
      },
    ]
  }
>
  <View>
    <Text
      style={
        Array [
          Object {
            "fontSize": 24,
            "fontWeight": "bold",
          },
        ]
      }
    >
      Ribollita
    </Text>
    <Image
      height={375}
      source={
        Object {
          "uri": "https://www.themealdb.com/images/media/meals/xrrwpx1487347049.jpg",
        }
      }
      style={
        Array [
          Object {
            "borderRadius": 4,
            "height": 375,
            "marginTop": 16,
            "width": 600,
          },
        ]
      }
      width={600}
    />
    <Text
      style={
        Array [
          Object {
            "fontSize": 24,
            "fontWeight": "bold",
            "marginTop": 24,
          },
        ]
      }
    >
      Instructions
    </Text>
    <Text
      style={
        Array [
          Object {
            "fontSize": 16,
            "marginTop": 8,
            "textAlign": "center",
          },
        ]
      }
    >
      Put 2 tablespoons of the oil in a large pot over medium heat. When it’s hot, add onion, carrot, celery and garlic; sprinkle with salt and pepper and cook, stirring occasionally, until vegetables are soft, 5 to 10 minutes.
Heat the oven to 500 degrees. Drain the beans; if they’re canned, rinse them as well. Add them to the pot along with tomatoes and their juices and stock, rosemary and thyme. Bring to a boil, then reduce heat so the soup bubbles steadily; cover and cook, stirring once or twice to break up the tomatoes, until the flavors meld, 15 to 20 minutes.
Fish out and discard rosemary and thyme stems, if you like, and stir in kale. Taste and adjust seasoning. Lay bread slices on top of the stew so they cover the top and overlap as little as possible. Scatter red onion slices over the top, drizzle with the remaining 3 tablespoons oil and sprinkle with Parmesan.
Put the pot in the oven and bake until the bread, onions and cheese are browned and crisp, 10 to 15 minutes. (If your pot fits under the broiler, you can also brown the top there.) Divide the soup and bread among 4 bowls and serve.
    </Text>
  </View>
</RCTScrollView>
`;
